improved styling of iframes in dark mode. fixes #10.

--- a/src/less/include/dark-mode.less
+++ b/src/less/include/dark-mode.less
@@ -46,6 +46,9 @@
 
   iframe {
     background-color: white;
+  }
+
+  iframe[src^="https://libraryaware.com/"] {
     filter: invert(1) hue-rotate(180deg);
   }
 
